--- a/templates/success.html
+++ b/templates/success.html
@@ -1,257 +1,70 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div class="main">
+
     
-    {% if cart_items %}
-    <h1 class="title">Your Shopping Cart</h1>
-      
-    <p class="money">£{{total}}</p><a href="{% url 'books:checkout' %}" class="payment">Proceed to payment</a>
-
-    {% for item in cart_items %}
-    <img src="{{item.book.image.url}}">
-    <div class="book_list">
-
-        <div class="content">
-            
-            <p id="author">Author: {{item.book.author}}</p>
-            <p id="price">${{item.book.price}}</p>
-            <p id="stock_status">{{item.book.stock_status}}</p>
-            <p id="description">{{item.book.description}}</p>
-            
-            <!-- Quantity Update Form -->
-            <form method="post" action="{% url 'books:update_quantity' item.id %}" style="display: inline;">
-                {% csrf_token %}
-                <input type="number" name="quantity" value="{{item.quantity}}" min="1" max="{{item.book.stock}}" required>
-                <button type="submit" class="button_update">Update</button>
-            </form>
-            
-            <!-- Remove Button -->
-            <a href="{% url 'books:remove_from_cart' item.id %}">
-                <button type="button" class="button_remove">Remove</button>
-            </a>
-
-        </div>
+    <div class="main">
 
         
 
-    </div>
+       
+            {% if messages %}
+            
+            <h2>You have Successfully Placed Your Order</h2>
+            <a  href="{% url 'books:home' %}" id="go_back_to_shopping">Go back to shop more</a>
+            {% endif %}
 
-
-    {% endfor %}
-
-    {% else %}
-    <h2 id="empty_cart">Your cart is empty for now </h2>
-    <a  href="{% url 'books:home' %}" id="go_back_to_shopping">Go back to Shopping</a>
     
-    {% endif %}
-
-</div>
+    
+    
+    </div>
 
 
 {% endblock %}
 
+
+
+
 {% block styling %}
 <style>
 
-.main {
-        width: 1300px;
-        margin: -10px auto 0 auto;
-        min-height: 100vh;
-        background-color: rgba(158, 170, 181, 0.149); 
-        position: relative;      
-        padding: 50px; 
-        padding-top: 30px;      
-    }
 
-    .book_list {
-        width: 1200px;
-        margin: 15px auto 0 auto;
-        min-height: 600px;
-        background-color: rgba(49, 97, 142, 0.21);
-        border-radius: 9px;
-        border:5px solid rgba(194, 199, 195, 0.897);
+
+   .main {
+    height: 100vh;
+    width: 100%;
+    background-color: rgba(137, 229, 168, 0.35);
+    position: fixed;
+  }
          
-    }
-
-    .content {
-        width: 470px;
-        margin: 10px 100px 10px 1px;
-        height: 550px;
-        border-radius: 9px;
-         
-        float: right;
-        padding: 10px 5px;   
-    }
-
-     img {
-        width: 300px;
-        margin: 70px 5px 5px 50px;
-        height: 350px;
-        border-radius: 9px;
-        border:2px solid rgba(158, 170, 181, 0.897); 
-        float: left;
-        
-        
-    }
-
-    .title {
-        width: 300px;
-        margin: 0 auto 10px auto;
-        padding-right: 20px;
-        
-    }
 
 
-
-
-
-    #author {
-
-        width: 500px;
-        margin: 15px 5px;  
-        padding: 5px 5px; 
-        margin-left: 30px; 
-        font-size: 20px;
-        font-weight: bold;
-    }
-
-    #price {
-        width: 500px;
-        margin: 15px 5px;  
-        padding: 5px 5px; 
-        height: 50px;
-        margin-left: 30px; 
-        font-size: 20px;
-        font-weight: bold;
-
-    }
-
-    #stock_status {
-        width: 500px;
-        margin: 15px 5px;  
-        padding: 5px 5px; 
-        height: 50px;
-        margin-left: 30px; 
-        font-size: 20px;
-        font-weight: bold;
-
-    }
-
-    #description {
-        width: 530px;
-        margin: 20px 5px;  
-        padding: 5px 5px; 
-        height: 100px;
-        overflow: hidden;
-        margin-left: 30px; 
-        font-size: 18px;
-        font-weight: 400;
-        border: 1px solid rgba(21, 88, 127, 0.445);
-        border-radius: 5px;
-        
-    }
-
-
-    .button_update {
-        
-        height: 35px;
-        width: 120px;
-        background-color: rebeccapurple;
-        margin-left: 30px;
-        background-color: rgba(2, 122, 243, 0.798);
-        border-radius: 5px;
-        font-size: 18px; 
-        cursor: pointer;
-        color: white;
-    }
-
-    .button_remove {
-        margin-left: 30px;
-        height: 35px;
-        width: 120px;
-        background-color: rgba(180, 20, 20, 0.736);
-        border-radius: 5px;
-        font-size: 18px; 
-        cursor: pointer;
-        color: wheat;
-    }
-
-
-    input {
-        margin-left: 50px;
-        float: left;
-        margin-left: 35px;
-        height: 35px;
-        width: 120px;
-        border-radius: 5px;
-        font-size: 19px;
-        text-align: center;
-        background-color: rgba(226, 230, 233, 0.402);
-    }
-
-    .payment {
-        width: 270px;
-        height: 42px;
-        position: absolute;
-        right: 60px;
-        top: 30px;
-        border: 0 black solid;
-        border-radius: 5px;
-        background-color: rgba(4, 179, 117, 0.926);
-        color: white;
-        padding: 0;
-        box-sizing: border-box; 
-        font-size: 23px; 
-        cursor: pointer;
-        text-decoration: none;
-        padding: 5px 5px 5px 35px;
-        
-    }
-
-
-   
-
-    .money {
-        width: 120px;
-        height: 42px;
-        position: absolute;
-        right: 350px;
-        top: 30px;
-        border: 0 black solid;
-        border-radius: 5px;
-        background-color: rgba(4, 179, 117, 0.926);
-        color: white;
-        padding: 10px;
-        padding-left: 0;
-        box-sizing: border-box; 
-        font-size: 23px; 
-        text-align: center;   
-    }
-
-    #empty_cart {
+    .main h2 {
         margin: 50px auto;
         padding: 50px;
         text-align: center;
         color: rgb(236, 7, 19);
-
+        font-size: 35px;
     }
 
-    #go_back_to_shopping{
-        
-        margin-left: 42%;
-        padding: 15px;
+    #go_back_to_shopping {
+        display: inline-block;
+        padding: 15px 30px;
         text-align: center;
         color: rgb(25, 24, 24);
-        font-size: 20px;
+        font-size: 24px;
         background-color: rgba(7, 239, 80, 0.862);
-        height: 40px;
-        border-radius: 5px;
+        border-radius: 8px;
         cursor: pointer;
         text-decoration: none;
+        border: none;
+        font-weight: 550;
+        margin-left: 520px;
+        width: 400px;
     }
 
+   
+
  
-    
     </style>
 {% endblock %}
